Fixed overflow of ChatRoom compoment

--- a/src/misc/App.css
+++ b/src/misc/App.css
@@ -27,7 +27,11 @@ html,body{
 }
 
 .full-screen{
-  height: calc(100vh - 60px) !important; 
+  height: calc(100vh - 60px) !important;
+}
+
+.app-test{
+  overflow: scroll !important;
 }
 
 .remove-padding{
@@ -74,6 +78,7 @@ html,body{
 }
 
 .content-column{
+  height: 94vh;
   background-color: #2e343a !important;
 }
 
@@ -118,7 +123,8 @@ html,body{
 }
 
 .chat-room-messages{
-  overflow-y: auto;
+  height: auto;
+  overflow-y: scroll;
 }
 
 .form-control{
